--- a/index.html
+++ b/index.html
@@ -202,8 +202,13 @@
 </head>
 <body>
 <header>
+  <div style="display:flex;align-items:center;justify-content:center;gap:22px;">
+    <img src="logo_trolley_myshop_bright.png" alt="Trolley Logo" style="width:70px;height:70px;border-radius:12px;box-shadow:0 3px 18px #0070f326;background:#fff;">
+  </div>
+
   <div class="logo">MyShop</div>
   <div class="platform-title">Multi Seller E-Commerce Platform</div>
+
   <nav class="nav-bar">
     <a href="login.html" class="nav-link">Login</a>
     <a href="signup.html" class="nav-link">Sign Up</a>
@@ -225,7 +230,7 @@
       <a class="cta-btn" href="custdashboard.html">Browse Products</a>
     </div>
     <div style="display:flex;align-items:center;justify-content:center;gap:22px;">
-      <img src="logo_trolley_myshop_bright.jpg" alt="MyShop Logo" style="width:70px;height:70px;border-radius:12px;box-shadow:0 3px 18px #0070f326;background:white;">
+      <img src="logo_trolley_myshop_bright.png" alt="MyShop Logo" style="width:70px;height:70px;border-radius:12px;box-shadow:0 3px 18px #0070f326;background:white;">
       </div>
   </section>
   <div class="features-row">
