--- a/invoice.html
+++ b/invoice.html
@@ -24,6 +24,10 @@
 <body>
 <div class="header">Invoice Details</div>
 <div id="invoice-details"></div>
+<div style="display:flex;align-items:center;justify-content:center;gap:22px;">
+  <img src="logo_trolley_myshop_bright.png" alt="MyShop Logo" style="width:70px;height:70px;border-radius:12px;box-shadow:0 3px 18px #0070f326;background:white;">
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   const supabase = window.supabase.createClient('https://wamqheltqmufuzrqlxlb.supabase.co','eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY');
