--- a/seller_order.html
+++ b/seller_order.html
@@ -30,6 +30,7 @@
     .status-dispatched { background: #2bc26b;}
     .status-delivered { background: #219f43;}
     .status-pending { background: #e67e22;}
+    .status-cancelled { background: #d82c27 !important; color: #fff !important; }
     .paid-badge { background: #007d37;}
     .cod-badge { background: #ffe600; color: #444;}
     .pending-badge { background: #e67e22;}
