--- a/signup.html
+++ b/signup.html
@@ -40,11 +40,12 @@
 </form>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-  window.onload = function() {
+  window.onload = function () {
     const supabase = window.supabase.createClient(
       'https://wamqheltqmufuzrqlxlb.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
-  );
+    );
+
     const form = document.getElementById('signup-form');
     const messageDiv = document.getElementById('message');
     const roleSelect = document.getElementById('role');
@@ -53,6 +54,16 @@
     const agreementContainer = document.getElementById('agreement-container');
     const acceptAgreement = document.getElementById('acceptAgreement');
     const submitButton = document.getElementById('submitButton');
+
+    // GST regex for 15 chars with India format
+    function isValidGST(gst) {
+      return /^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$/.test(gst);
+    }
+
+    // PAN regex: 5 letters, 4 digits, 1 letter
+    function isValidPAN(pan) {
+      return /^[A-Z]{5}[0-9]{4}[A-Z]{1}$/.test(pan);
+    }
 
     function toggleTaxFields() {
       if (roleSelect.value === 'seller') {
@@ -70,7 +81,7 @@
         gstInput.value = '';
         panInput.value = '';
         agreementContainer.style.display = 'none';
-        submitButton.disabled = false; // customers no need agreement
+        submitButton.disabled = false;
       }
     }
 
@@ -82,26 +93,21 @@
       }
     }
 
-    roleSelect.addEventListener('change', () => {
-      toggleTaxFields();
-    });
+    roleSelect.addEventListener('change', toggleTaxFields);
+    acceptAgreement.addEventListener('change', updateSubmitState);
+    toggleTaxFields();
 
-    acceptAgreement.addEventListener('change', () => {
-      updateSubmitState();
-    });
-
-    toggleTaxFields();  // initialize on load
-
-    form.onsubmit = async function(e) {
+    form.onsubmit = async function (e) {
       e.preventDefault();
       messageDiv.textContent = '';
       messageDiv.className = '';
+
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
       const role = roleSelect.value;
-      const gst_number = gstInput.value.trim();
-      const pan_number = panInput.value.trim();
+      const gst_number = gstInput.value.trim().toUpperCase();
+      const pan_number = panInput.value.trim().toUpperCase();
       const agreementAccepted = acceptAgreement.checked;
 
       if (password.length < 6) {
@@ -116,8 +122,18 @@
           messageDiv.className = 'error';
           return;
         }
+        if (!isValidGST(gst_number)) {
+          messageDiv.textContent = "Invalid GST Number format.";
+          messageDiv.className = 'error';
+          return;
+        }
         if (!pan_number) {
           messageDiv.textContent = "PAN Number is required for sellers.";
+          messageDiv.className = 'error';
+          return;
+        }
+        if (!isValidPAN(pan_number)) {
+          messageDiv.textContent = "Invalid PAN Number format.";
           messageDiv.className = 'error';
           return;
         }
@@ -134,21 +150,24 @@
         const { data, error } = await supabase.auth.signUp({ email, password });
         if (error) throw error;
 
-        // Insert profile row with agreement acceptance flag
-        await supabase.from('profiles').insert([{
-          id: data.user.id,
-          name,
-          email,
-          role,
-          gst_number: role === 'seller' ? gst_number : null,
-          pan_number: role === 'seller' ? pan_number : null,
-          agreement_accepted: role === 'seller' ? true : null,
-          created_at: new Date()
-        }]);
+        await supabase.from('profiles').insert([
+          {
+            id: data.user.id,
+            name,
+            email,
+            role,
+            gst_number: role === 'seller' ? gst_number : null,
+            pan_number: role === 'seller' ? pan_number : null,
+            agreement_accepted: role === 'seller' ? true : null,
+            created_at: new Date()
+          }
+        ]);
 
         messageDiv.textContent = "Signup successful! Please check your email for a verification link.";
         messageDiv.className = 'success';
-        setTimeout(() => { window.location.href = 'login.html'; }, 4500);
+        setTimeout(() => {
+          window.location.href = 'login.html';
+        }, 4500);
       } catch (err) {
         messageDiv.textContent = "Error: " + err.message;
         messageDiv.className = 'error';
